--- a/labs/lab04/presentation/Л04_Арфонос_Презентация.md
+++ b/labs/lab04/presentation/Л04_Арфонос_Презентация.md
@@ -53,7 +53,7 @@ header-includes:
 :::
 ::: {.column width="30%"}
 
-## Устанавливаю  git-flow.
+# Устанавливаю  git-flow.
 
 ![Установка git-flow](image/2.png)
 
@@ -61,42 +61,42 @@ header-includes:
 ::: {.column width="30%"}
 
  
-## Создаю репозиторий на гитхабе
+# Создаю репозиторий на гитхабе
 
 ![создания репозитория](image/7.png)
 
 :::
 ::: {.column width="30%"}
 
-## Делаем первый коммит и выкладываем на github.
+# Делаем первый коммит и выкладываем на github.
 
 ![коммит](image/8.png)
 
 :::
 ::: {.column width="30%"}
 
-## Инициализируем git-flow, Префикс для ярлыков установим в v.
+# Инициализируем git-flow, Префикс для ярлыков установим в v.
 
 ![git flow](image/33.png)
 
 :::
 ::: {.column width="30%"}
 
-## Сконфигурируем файл package.json для формирования коммитов.
+# Сконфигурируем файл package.json для формирования коммитов.
 
 ![Редакторирование файла джсон](image/12.png)
 
 :::
 ::: {.column width="30%"}
 
-## Добавим новые файлы, Выполним коммит
+# Добавим новые файлы, Выполним коммит
 
 ![Выполняем коммит](image/13.png)
 
 :::
 ::: {.column width="30%"}
 
-## Создадим релиз на github с комментарием из журнала изменений.
+# Создадим релиз на github с комментарием из журнала изменений.
 
 ![создание релиза](image/34.png)
 
