--- a/labs/lab06/report/Л06_Арфонос_отчёт.md
+++ b/labs/lab06/report/Л06_Арфонос_отчёт.md
@@ -131,7 +131,7 @@ letters, memos, misk.(рис. [-@fig:008])
 
 - каталог не удаляется т.к. нужно использовать специальный аргумент.
 
-![удаление каталога](image/21.png){ #fig:010 width=70% }
+![удаление каталога](image/21.png){ width=70% }
 
  **11**
 
