--- a/labs/lab08/report/Л08_Арфонос_отчёт.md
+++ b/labs/lab08/report/Л08_Арфонос_отчёт.md
@@ -160,11 +160,10 @@ header-includes:
 
  **14**
 
-Воспользовавшись справкой команды find, вывел имена всех директорий, имеющихся в вашем домашнем каталоге.(рис. [-@fig:015])
+Воспользовавшись справкой команды find, вывел имена всех директорий, имеющихся в вашем домашнем каталоге (рис. [-@fig:015])
 
 ![ Опции ](image/15.png){ #fig:015 width=70% }
 
 # Вывод
 
 В ходе работы я ознакомился с инструментами поиска файлов и фильтрации текстовых данных.
-
