--- a/labs/lab05/report/Л05_Арфонос_отчёт.md
+++ b/labs/lab05/report/Л05_Арфонос_отчёт.md
@@ -2,7 +2,7 @@
 ## Front matter
 title: "Отчёт по лабораторной работе № 5"
 subtitle: "Простейший вариант"
-author: "Арфонос Дмитрий"
+author: "Ахмед мд Шехир"
 
 ## Generic otions
 lang: ru-RU
@@ -96,118 +96,7 @@ header-includes:
  **5**
 Создадим структуру git: (рис. [-@fig:005])
 
-![структура git](image/7.png){ #fig:005 width=70% }
-
- **6**
-задаем адрес репозитория на хостинге и сразу синхронизируем:(рис. [-@fig:006])
-
-![адрес репозитория на хостинге](image/9.png){ #fig:006 width=70% }
-
- **7**
-вручную закоммитим и выложим изменения:(рис. [-@fig:007])
-
-![создания репозитория](image/8.png){ #fig:007 width=70% }
-
- **8**
-Сделаем интерфейс для взаимодействия с броузером (native messaging)(рис. [-@fig:008])
-
-![Интерфейс для взаимодействия с броузером (native messaging)](image/10.png){ #fig:008 width=70% }
-
- **9**
-
-Скачивание browserpass(рис. [-@fig:009])
-
-![browserpass скачивание](image/11.png){ #fig:009 width=70% }
-
- **10**
-
-Добавить новый пароль. (рис. [-@fig:010])
-
-![новый пароль](image/12.png){ #fig:010 width=70% }
-
- **11**
-
-Отобразим пароль для указанного имени файла:(рис. [-@fig:011])
-
-![Отобразим пароль](image/13.png){ #fig:011 width=70% }
-
- **12**
-
-Заменяю существующий пароль(рис. [-@fig:012])
-
-![Замена пароля](image/14.png){ #fig:012 width=70% }
-
- **13**
-
-Установим дополнительное программное обеспечение:(рис. [-@fig:013])
-
-![ДПО](image/16.png){ width=70% }
-
-![ дополнительное программное обеспечение:](image/15.png){ #fig:013 width=70% }
-
- **14**
-
-Установим шрифты:(рис. [-@fig:014])
-
-![шрифты](image/17.png){ #fig:014 width=70% }
-
-![шрифты](image/18.png){  width=70% }
-
-![шрифты](image/19.png){  width=70% }
-
- **15**
-
-Создание собственного репозитория с помощью утилит:(рис. [-@fig:015])
-
-![Создание репозитория](image/20.png){ #fig:015 width=70% }
-
- **16**
-
-Подключение репозитория к своей системе. (рис. [-@fig:016])
-
-![Подключение репозитория](image/21.png){ #fig:016 width=70% }
-
- **17**
-
-Проверим, какие изменения внесёт chezmoi в домашний каталог(рис. [-@fig:017])
-
-![изменения в домашний каталоге](image/22.png){ #fig:017 width=70% }
-
- **18**
-
-Сохраняем изменения, внесённые chezmoi,(рис. [-@fig:018])
-
-![изменения, внесённые chezmoi](image/23.png){ #fig:018 width=70% }
-
- **19**
-
-Использование chezmoi на нескольких машинах.(рис. [-@fig:019])
-
-![ инициализируем chezmoi ](image/25.png){ #fig:019 width=70% }
-
- **20**
-
-Установим свои dotfiles на новый компьютер с помощью одной команды:(рис. [-@fig:020])
-
-![Установим свои dotfiles](image/26.png){ #fig:020 width=70% }
-
- **21**
-
-Извлечем изменения из репозитория и применить их одной командой:(рис. [-@fig:021])
-
-![Извлечем изменения из репозитория](image/27.png){ #fig:021 width=70% }
-
- **22**
-
-Извлечем последние изменения из своего репозитория (рис. [-@fig:022])
-
-![последние изменения из своего репозитория](image/28.png){ #fig:022 width=70% }
-
- **23**
-
-Автоматически фиксируем и отправляем изменения в репозиторий(рис. [-@fig:023])
-
-![Автоматическая фиксация](image/29.png){ #fig:023 width=70% }
+![структура git](image/6.png){ #fig:005 width=70% }
 
 
 # Вывод
